--- a/portfolio.css
+++ b/portfolio.css
@@ -2,3 +2,4 @@
 body{background:url(https://abduzeedo.com/sites/default/files/styles/home_cover/public/originals/1280x720.jpg?itok=YUy8syWj); background-repeat: no-repeat; background-size: 2000px;}
 .scratch{display: block; margin-left:520px; margin-right:block ; margin-top: -600px ; width:25%;}
 h1{color: white;text-align: center;}
+.write{color: white;margin-right: auto;margin-left:200px;}
